initial zoom fixed to fit well on mobile

--- a/css/default.css
+++ b/css/default.css
@@ -44,6 +44,10 @@ body {
     width: 100%;
 }
 
+body {
+    zoom: 0.6;
+}
+
 a {
     text-decoration: none;
 }
@@ -69,4 +73,12 @@ input {
     border: none;
     background-color: transparent;
     border-bottom: 2px solid var(--brown-primary);
+}
+
+@media (min-width: 480px) {
+
+    body {
+        zoom: 1;
+    }
+
 }
